// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in the global context does not run any tests if a global beforeEach hook fails 1`] = `
FAIL __tests__/global/skipsTests.test.js
  ● Console

    console.log __tests__/global/skipsTests.test.js:9
      global beforeEach
    console.log __tests__/global/skipsTests.test.js:9
      global beforeEach
    console.log __tests__/global/skipsTests.test.js:9
      global beforeEach

  ● global test

    The global beforeEach hook failed.

       8 | beforeEach(() => {
       9 |   console.log('global beforeEach');
    > 10 |   throw new Error('The global beforeEach hook failed.');
         |         ^
      11 | });
      12 | 
      13 | it('global test', () => {

      at Object.<anonymous>.beforeEach (__tests__/global/skipsTests.test.js:10:9)

  ● test suite › outer test

    The global beforeEach hook failed.

       8 | beforeEach(() => {
       9 |   console.log('global beforeEach');
    > 10 |   throw new Error('The global beforeEach hook failed.');
         |         ^
      11 | });
      12 | 
      13 | it('global test', () => {

      at Object.<anonymous>.beforeEach (__tests__/global/skipsTests.test.js:10:9)

  ● test suite › nested block › nested test

    The global beforeEach hook failed.

       8 | beforeEach(() => {
       9 |   console.log('global beforeEach');
    > 10 |   throw new Error('The global beforeEach hook failed.');
         |         ^
      11 | });
      12 | 
      13 | it('global test', () => {

      at Object.<anonymous>.beforeEach (__tests__/global/skipsTests.test.js:10:9)
`;

exports[`in the global context does not run any tests if a global beforeEach hook fails 2`] = `
Test Suites: 1 failed, 1 total
Tests:       3 failed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /global\\/skipsTests.test.js/i.
`;

exports[`in the global context still runs global afterAll hooks if a global beforeEach fails 1`] = `
FAIL __tests__/global/afterAllHook.test.js
  ● Console

    console.log __tests__/global/afterAllHook.test.js:9
      global beforeEach
    console.log __tests__/global/afterAllHook.test.js:18
      global afterAll

  ● global test

    The global beforeEach hook failed.

       8 | beforeEach(() => {
       9 |   console.log('global beforeEach');
    > 10 |   throw new Error('The global beforeEach hook failed.');
         |         ^
      11 | });
      12 | 
      13 | it('global test', () => {

      at Object.<anonymous>.beforeEach (__tests__/global/afterAllHook.test.js:10:9)
`;

exports[`in the global context still runs global afterAll hooks if a global beforeEach fails 2`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /global\\/afterAllHook.test.js/i.
`;

exports[`in the global context still runs global afterEach hooks if a global beforeEach fails 1`] = `
FAIL __tests__/global/afterEachHook.test.js
  ● Console

    console.log __tests__/global/afterEachHook.test.js:9
      global beforeEach
    console.log __tests__/global/afterEachHook.test.js:18
      global afterEach

  ● global test

    The global beforeEach hook failed.

       8 | beforeEach(() => {
       9 |   console.log('global beforeEach');
    > 10 |   throw new Error('The global beforeEach hook failed.');
         |         ^
      11 | });
      12 | 
      13 | it('global test', () => {

      at Object.<anonymous>.beforeEach (__tests__/global/afterEachHook.test.js:10:9)
`;

exports[`in the global context still runs global afterEach hooks if a global beforeEach fails 2`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /global\\/afterEachHook.test.js/i.
`;

exports[`inside deeply nested blocks can cancel tests only for the nested describe block it is in 1`] = `
FAIL __tests__/nestedBlocks/testsInDifferentBlocks.test.js
  ● Console

    console.log __tests__/nestedBlocks/testsInDifferentBlocks.test.js:10
      outer test
    console.log __tests__/nestedBlocks/testsInDifferentBlocks.test.js:15
      nested beforeEach
    console.log __tests__/nestedBlocks/testsInDifferentBlocks.test.js:15
      nested beforeEach

  ● tests for the nested beforeEach › nested block › first nested test

    The nested beforeEach hook failed.

      14 |     beforeEach(() => {
      15 |       console.log('nested beforeEach');
    > 16 |       throw new Error('The nested beforeEach hook failed.');
         |             ^
      17 |     });
      18 | 
      19 |     it('first nested test', () => {

      at Object.beforeEach (__tests__/nestedBlocks/testsInDifferentBlocks.test.js:16:13)

  ● tests for the nested beforeEach › nested block › second nested test

    The nested beforeEach hook failed.

      14 |     beforeEach(() => {
      15 |       console.log('nested beforeEach');
    > 16 |       throw new Error('The nested beforeEach hook failed.');
         |             ^
      17 |     });
      18 | 
      19 |     it('first nested test', () => {

      at Object.beforeEach (__tests__/nestedBlocks/testsInDifferentBlocks.test.js:16:13)
`;

exports[`inside deeply nested blocks can cancel tests only for the nested describe block it is in 2`] = `
Test Suites: 1 failed, 1 total
Tests:       2 failed, 1 passed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /nestedBlocks\\/testsInDifferentBlocks.test.js/i.
`;

exports[`inside deeply nested blocks still runs afterEach hooks for the test whose beforeEach failed 1`] = `
FAIL __tests__/nestedBlocks/afterEachHook.test.js
  ● Console

    console.log __tests__/nestedBlocks/afterEachHook.test.js:10
      outer test
    console.log __tests__/nestedBlocks/afterEachHook.test.js:29
      outer afterEach
    console.log __tests__/nestedBlocks/afterEachHook.test.js:15
      nested beforeEach
    console.log __tests__/nestedBlocks/afterEachHook.test.js:24
      nested afterEach
    console.log __tests__/nestedBlocks/afterEachHook.test.js:29
      outer afterEach

  ● afterEach hooks with a nested beforeEach › nested block › nested test

    The nested beforeEach hook failed.

      14 |     beforeEach(() => {
      15 |       console.log('nested beforeEach');
    > 16 |       throw new Error('The nested beforeEach hook failed.');
         |             ^
      17 |     });
      18 | 
      19 |     it('nested test', () => {

      at Object.beforeEach (__tests__/nestedBlocks/afterEachHook.test.js:16:13)
`;

exports[`inside deeply nested blocks still runs afterEach hooks for the test whose beforeEach failed 2`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /nestedBlocks\\/afterEachHook.test.js/i.
`;

exports[`inside deeply nested blocks still runs the afterAll hooks if a nested beforeEach fails 1`] = `
FAIL __tests__/nestedBlocks/afterAllHook.test.js
  ● Console

    console.log __tests__/nestedBlocks/afterAllHook.test.js:10
      outer test
    console.log __tests__/nestedBlocks/afterAllHook.test.js:15
      nested beforeEach
    console.log __tests__/nestedBlocks/afterAllHook.test.js:24
      nested afterAll
    console.log __tests__/nestedBlocks/afterAllHook.test.js:29
      outer afterAll

  ● afterAll hooks with a nested beforeEach › nested block › nested test

    The nested beforeEach hook failed.

      14 |     beforeEach(() => {
      15 |       console.log('nested beforeEach');
    > 16 |       throw new Error('The nested beforeEach hook failed.');
         |             ^
      17 |     });
      18 | 
      19 |     it('nested test', () => {

      at Object.beforeEach (__tests__/nestedBlocks/afterAllHook.test.js:16:13)
`;

exports[`inside deeply nested blocks still runs the afterAll hooks if a nested beforeEach fails 2`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 passed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /nestedBlocks\\/afterAllHook.test.js/i.
`;

exports[`without nested blocks does not run any of the tests if beforeEach fails 1`] = `
FAIL __tests__/singleBlock/multipleTests.test.js
  ● Console

    console.log __tests__/singleBlock/multipleTests.test.js:10
      beforeEach
    console.log __tests__/singleBlock/multipleTests.test.js:10
      beforeEach

  ● a block with multiple tests › skipped first test

    The beforeEach hook failed.

       9 |   beforeEach(() => {
      10 |     console.log('beforeEach');
    > 11 |     throw new Error('The beforeEach hook failed.');
         |           ^
      12 |   });
      13 | 
      14 |   test('skipped first test', () => {

      at Object.beforeEach (__tests__/singleBlock/multipleTests.test.js:11:11)

  ● a block with multiple tests › skipped second test

    The beforeEach hook failed.

       9 |   beforeEach(() => {
      10 |     console.log('beforeEach');
    > 11 |     throw new Error('The beforeEach hook failed.');
         |           ^
      12 |   });
      13 | 
      14 |   test('skipped first test', () => {

      at Object.beforeEach (__tests__/singleBlock/multipleTests.test.js:11:11)
`;

exports[`without nested blocks does not run any of the tests if beforeEach fails 2`] = `
Test Suites: 1 failed, 1 total
Tests:       2 failed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /singleBlock\\/multipleTests.test.js/i.
`;

exports[`without nested blocks does not run the test if beforeEach fails 1`] = `
FAIL __tests__/singleBlock/singleTest.test.js
  ● Console

    console.log __tests__/singleBlock/singleTest.test.js:10
      beforeEach

  ● a block with a single test › skipped test

    The beforeEach hook failed.

       9 |   beforeEach(() => {
      10 |     console.log('beforeEach');
    > 11 |     throw new Error('The beforeEach hook failed.');
         |           ^
      12 |   });
      13 | 
      14 |   test('skipped test', () => {

      at Object.beforeEach (__tests__/singleBlock/singleTest.test.js:11:11)
`;

exports[`without nested blocks does not run the test if beforeEach fails 2`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /singleBlock\\/singleTest.test.js/i.
`;

exports[`without nested blocks runs all of the beforeEach hooks if one fails but does not run the tests 1`] = `
FAIL __tests__/singleBlock/multipleBeforeEachHooks.test.js
  ● Console

    console.log __tests__/singleBlock/multipleBeforeEachHooks.test.js:10
      first beforeEach
    console.log __tests__/singleBlock/multipleBeforeEachHooks.test.js:15
      second beforeEach

  ● a block with multiple beforeEach hooks › skipped test

    The first beforeEach hook failed.

       9 |   beforeEach(() => {
      10 |     console.log('first beforeEach');
    > 11 |     throw new Error('The first beforeEach hook failed.');
         |           ^
      12 |   });
      13 | 
      14 |   beforeEach(() => {

      at Object.beforeEach (__tests__/singleBlock/multipleBeforeEachHooks.test.js:11:11)

  ● a block with multiple beforeEach hooks › skipped test

    The second beforeEach hook failed.

      14 |   beforeEach(() => {
      15 |     console.log('second beforeEach');
    > 16 |     throw new Error('The second beforeEach hook failed.');
         |           ^
      17 |   });
      18 | 
      19 |   test('skipped test', () => {

      at Object.beforeEach (__tests__/singleBlock/multipleBeforeEachHooks.test.js:16:11)
`;

exports[`without nested blocks runs all of the beforeEach hooks if one fails but does not run the tests 2`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /singleBlock\\/multipleBeforeEachHooks.test.js/i.
`;

exports[`without nested blocks still runs afterEach hook if the beforeEach hook fails 1`] = `
FAIL __tests__/singleBlock/afterEachHook.test.js
  ● Console

    console.log __tests__/singleBlock/afterEachHook.test.js:10
      beforeEach
    console.log __tests__/singleBlock/afterEachHook.test.js:19
      afterEach

  ● a block with afterEach hooks › skipped test

    The beforeEach hook failed.

       9 |   beforeEach(() => {
      10 |     console.log('beforeEach');
    > 11 |     throw new Error('The beforeEach hook failed.');
         |           ^
      12 |   });
      13 | 
      14 |   test('skipped test', () => {

      at Object.beforeEach (__tests__/singleBlock/afterEachHook.test.js:11:11)
`;

exports[`without nested blocks still runs afterEach hook if the beforeEach hook fails 2`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /singleBlock\\/afterEachHook.test.js/i.
`;

exports[`without nested blocks still runs the afterAll hook if the beforeEach hook fails 1`] = `
FAIL __tests__/singleBlock/afterAllHook.test.js
  ● Console

    console.log __tests__/singleBlock/afterAllHook.test.js:10
      beforeEach
    console.log __tests__/singleBlock/afterAllHook.test.js:19
      afterAll

  ● a block with an afterAll hook › skipped test

    The beforeEach hook failed.

       9 |   beforeEach(() => {
      10 |     console.log('beforeEach');
    > 11 |     throw new Error('The beforeEach hook failed.');
         |           ^
      12 |   });
      13 | 
      14 |   test('skipped test', () => {

      at Object.beforeEach (__tests__/singleBlock/afterAllHook.test.js:11:11)
`;

exports[`without nested blocks still runs the afterAll hook if the beforeEach hook fails 2`] = `
Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching /singleBlock\\/afterAllHook.test.js/i.
`;
